<layout>

    <data>

        <variable
            name="fingerprint"
            type="com.example.kotlinfutures.model.local.FingerDialog" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/twenty_margin"
        android:paddingRight="@dimen/twenty_margin"
        android:paddingTop="@dimen/twenty_margin">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/text_sign_in"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_margin"
            android:text="@string/fingerprint_help"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <ImageView
            android:id="@+id/image_finger"
            android:layout_width="@dimen/fingerprint_size"
            android:layout_height="@dimen/fingerprint_size"
            android:layout_marginTop="@dimen/default_margin"
            app:imageDrawable="@{fingerprint.source}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_subtitle" />

        <TextView
            android:id="@+id/text_error"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/default_margin"
            android:gravity="center_vertical"
            android:text="@{fingerprint.message}"
            android:textColor="@{context.getColor(fingerprint.color)}"
            app:layout_constraintBottom_toBottomOf="@id/image_finger"
            app:layout_constraintLeft_toRightOf="@id/image_finger"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_finger" />

        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/button_cancel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_finger" />

    </android.support.constraint.ConstraintLayout>
</layout>
