<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="user"
            type="com.example.kotlinfutures.model.local.User" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_phone_call"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="@dimen/twenty_margin"
                    android:background="@android:drawable/sym_action_call"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_location" />

                <ImageView
                    android:id="@+id/image_user_icon"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/text_full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_margin"
                    android:fontFamily="sans-serif-black"
                    android:text="@{user.nameFirst + ' ' + user.nameLast}"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/image_user_icon"
                    app:layout_constraintStart_toStartOf="@+id/image_user_icon"
                    app:layout_constraintTop_toBottomOf="@+id/image_user_icon"
                    tools:text="Alice Gonzales" />

                <TextView
                    android:id="@+id/text_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(user.age)}"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/text_full_name"
                    app:layout_constraintStart_toStartOf="@+id/text_full_name"
                    app:layout_constraintTop_toBottomOf="@+id/text_full_name"
                    tools:text="25 years old" />

                <TextView
                    android:id="@+id/text_dob_descript"
                    style="@style/TextSizeLittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ddble_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_dob_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_age" />

                <TextView
                    android:id="@+id/text_birth_day"
                    style="@style/TextSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.dob}"
                    app:layout_constraintStart_toStartOf="@+id/text_dob_descript"
                    app:layout_constraintTop_toBottomOf="@+id/text_dob_descript"
                    tools:text="1985-06-18" />

                <TextView
                    android:id="@+id/text_gender_descript"
                    style="@style/TextSizeLittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_gender_description"
                    app:layout_constraintStart_toStartOf="@+id/text_birth_day"
                    app:layout_constraintTop_toBottomOf="@+id/text_birth_day" />

                <TextView
                    android:id="@+id/text_gender"
                    style="@style/TextSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.gender}"
                    app:layout_constraintStart_toStartOf="@+id/text_gender_descript"
                    app:layout_constraintTop_toBottomOf="@+id/text_gender_descript"
                    tools:text="Female" />

                <TextView
                    android:id="@+id/text_phone_descript"
                    style="@style/TextSizeLittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_cell_phone"
                    app:layout_constraintStart_toStartOf="@+id/text_gender"
                    app:layout_constraintTop_toBottomOf="@+id/text_gender" />

                <TextView
                    android:id="@+id/text_phone_number"
                    style="@style/TextSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.cell}"
                    app:layout_constraintStart_toStartOf="@+id/text_phone_descript"
                    app:layout_constraintTop_toBottomOf="@+id/text_phone_descript"
                    tools:text="+18045789351" />

                <TextView
                    android:id="@+id/text_email_descript"
                    style="@style/TextSizeLittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_description"
                    app:layout_constraintStart_toStartOf="@+id/text_phone_number"
                    app:layout_constraintTop_toBottomOf="@+id/text_phone_number" />

                <TextView
                    android:id="@+id/text_email"
                    style="@style/TextSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.email}"
                    app:layout_constraintStart_toStartOf="@+id/text_email_descript"
                    app:layout_constraintTop_toBottomOf="@+id/text_email_descript"
                    tools:text="example@gmail.com" />

                <TextView
                    android:id="@+id/text_location_descript"
                    style="@style/TextSizeLittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/text_location_description"
                    app:layout_constraintStart_toStartOf="@+id/text_email"
                    app:layout_constraintTop_toBottomOf="@+id/text_email" />

                <TextView
                    android:id="@+id/text_location"
                    style="@style/TextSizeMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.location}"
                    app:layout_constraintStart_toStartOf="@+id/text_location_descript"
                    app:layout_constraintTop_toBottomOf="@+id/text_location_descript"
                    tools:text="Kyiv, Ukraine" />

            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>
